hphp/hack/test/typecheck/let/let_switch.php.exp
File "let_switch.php", line 15, characters 8-10:
Unbound name: ret (a global constant) (Naming[2049])
